updated package version

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Hi, I'm Davis👋</div>
-                <div class="intro-heading">It's My UX Portfolio.</div>
+                <div class="intro-heading">Welcome to My UX Portfolio.</div>
                 <a href="#portfolio" class="page-scroll btn btn-xl">View My Projects</a>
                 <a href="#about" class="page-scroll btn btn-xl">About Me</a>
                 <a href="img/Resume-Davis-2022-TW.pdf" target="_blank" class="page-scroll btn btn-xl"><u>My Resume</u></a>
