--- a/_includes/services.html
+++ b/_includes/services.html
@@ -22,7 +22,7 @@
                                 </h2>
                             </div>
                             <div class="back">
-                                <h3 class="service-heading">I play table tennis.</h3>
+                                <h3 class="service-heading">Table tennis is my favorite sport.</h3>
                             </div>
                         </div>
                     </div>
@@ -38,8 +38,8 @@
                                     </span>
                                 </h2>
                             </div>
-                            <div class="back" style="padding-top: 35%;">
-                                <h3 class="service-heading">I host a Mandarin video games podcast</h3>
+                            <div class="back" style="padding-top: 25%;">
+                                <h3 class="service-heading">I host a Mandarin video games podcast called <br><a href="https://open.firstory.me/user/dzchannel/platforms" target="_blank">低利宅生</a></h3>
                             </div>
                         </div>
                     </div>
@@ -155,12 +155,10 @@
                                 </span>
                             </h4>
                         </summary>
-                        <p class="text-muted original">Act-Age</p>
                         <p class="text-muted original">Detective Conan</p>
                         <p class="text-muted original">Dragon Ball Z</p>
-                        <p class="text-muted original">Fate / stay night</p>
+                        <p class="text-muted original">Fate / Stay Night</p>
                         <p class="text-muted original">K-ON</p>
-                        <p class="text-muted original">No Game No Life</p>
                     </details>                   
                 </div>
                 <div class="col-md-4 col-sm-6">
@@ -173,11 +171,9 @@
                                 </span>
                             </h4>
                         </summary>
-                        <p class="text-muted original">Factorio</p>
-                        <p class="text-muted original">Forza Horizon 3</p>
+                        <p class="text-muted original">Guild Wars 2</p>
                         <p class="text-muted original">League of Legends</p>
-                        <p class="text-muted original">Rockman X4</p>
-                        <p class="text-muted original">Slay the Spire</p>
+                        <p class="text-muted original">Megaman X4</p>
                         <p class="text-muted original">Super Mario Maker 2</p>
                     </details>
                 </div>
