--- a/_includes/services.html
+++ b/_includes/services.html
@@ -112,7 +112,7 @@
                     <details>
                         <summary>
                             <h4 class="service-heading favorite-cursor">
-                                Drama
+                                Drama Series
                                 <span class="fa-stack fa-1x">
                                     <i class="fa fa-tv fa-stack-1x"></i>
                                 </span>
@@ -137,10 +137,10 @@
                                 </span>
                             </h4>
                         </summary>
+                        <p class="text-muted original">MTG</p>
                         <p class="text-muted original">Arkham Horror</p>
                         <p class="text-muted original">Carcassonne</p>
                         <p class="text-muted original">Catan</p>
-                        <p class="text-muted original">Exploding Kittens</p>
                         <p class="text-muted original">Love Letter</p>
                         <p class="text-muted original">Seasons</p>
                     </details>
@@ -157,7 +157,7 @@
                         </summary>
                         <p class="text-muted original">Detective Conan</p>
                         <p class="text-muted original">Dragon Ball Z</p>
-                        <p class="text-muted original">Fate / Stay Night</p>
+                        <p class="text-muted original">Fate/Stay Night</p>
                         <p class="text-muted original">K-ON</p>
                     </details>                   
                 </div>
