Updated About me

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -17,12 +17,13 @@
                                 <h2>
                                     <span class="fa-stack fa-1x">
                                         <i class="fa fa-circle fa-stack-2x front-1"></i>
-                                        <i class="fas fa-table-tennis fa-stack-1x fa-inverse"></i>
+                                        <i class="fas fa-terminal fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </h2>
+                                <p><b>Developer</b></p>
                             </div>
                             <div class="back">
-                                <h3 class="service-heading">Table tennis is my favorite sport.</h3>
+                                <h3 class="service-heading">I immerse myself in coding.</h3>
                             </div>
                         </div>
                     </div>
@@ -34,12 +35,13 @@
                                 <h2>
                                     <span class="fa-stack fa-1x">
                                         <i class="fa fa-circle fa-stack-2x front-2"></i>
-                                        <i class="fas fa-microphone-alt fa-stack-1x fa-inverse"></i>
+                                        <i class="fa fa-pen fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </h2>
+                                <p><b>UX Designer</b></p>
                             </div>
-                            <div class="back" style="padding-top: 25%;">
-                                <h3 class="service-heading">I host a Mandarin video games podcast called <br><a href="https://open.firstory.me/user/dzchannel/platforms" target="_blank">低利宅生</a></h3>
+                            <div class="back">
+                                <h3 class="service-heading">Design is the way I stay checked-in to society.</h3>
                             </div>
                         </div>
                     </div>
@@ -51,12 +53,13 @@
                                 <h2>
                                     <span class="fa-stack fa-1x">
                                         <i class="fa fa-circle fa-stack-2x front-3"></i>
-                                        <i class="fas fa-music fa-stack-1x fa-inverse"></i>
+                                        <i class="fa fa-gamepad fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </h2>
+                                <p><b>Gamer</b></p>
                             </div>
                             <div class="back">
-                                <h3 class="service-heading">I used to play Flute for 4 years.</h3>
+                                <h3 class="service-heading">Game is a reflection of our past, present, and future.</h3>
                             </div>
                         </div>
                     </div>
@@ -69,7 +72,7 @@
                     </h3>
                 </div>
             </div>
-            <div class="row text-left">
+            <div class="row text-center">
                 <div class="col-md-4 col-sm-6">
                     <details>
                         <summary>
@@ -80,8 +83,8 @@
                                 </span>
                             </h4>
                         </summary>
-                        <p class="text-muted original">Bias: Moonbyul (MAMAMOO)</p>
-                        <p class="text-muted original">Ultimate bias: Taeyeon (Girls' Generation)</p>
+                        <p class="text-muted original">Bias: Moonbyul</p>
+                        <p class="text-muted original">Ultimate bias: Taeyeon</p>
                     </details>
                     
                 </div>
@@ -96,55 +99,26 @@
                             </h4>
                         </summary>
                         <p class="text-muted original">Pacers fan!</p>
-                        <p class="text-muted original">
-                            Favorite players:
-                            <ul  class="text-muted original">
-                                <li>Kobe Bryant</li>
-                                <li>Dirk Nowitzki</li>
-                                <li>Carmelo Anthony</li>
-                                <li>Dwight Howard</li>
-                                <li>Victor Oladipo</li>
-                            </ul>
-                        </p>
+                        
                     </details>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <details>
                         <summary>
                             <h4 class="service-heading favorite-cursor">
-                                Drama Series
-                                <span class="fa-stack fa-1x">
-                                    <i class="fa fa-tv fa-stack-1x"></i>
-                                </span>
-                            </h4>
-                        </summary>
-                        <p class="text-muted original">The Good Place</p>
-                        <p class="text-muted original">How to get away with Murder</p>
-                        <p class="text-muted original">Sherlock</p>
-                        <p class="text-muted original">Legel High (Japanese)</p>
-                        <p class="text-muted original">Shitsuren Chocolatier (Japanese)</p>
-                    </details>
-                </div>
-            </div>
-            <div class="row text-left">
-                <div class="col-md-4 col-sm-6">
-                    <details>
-                        <summary>
-                            <h4 class="service-heading favorite-cursor">
-                                Board Games
+                                TCG/LCG
                                 <span class="fa-stack fa-1x">
                                     <i class="fa fa-dice fa-stack-1x"></i>
                                 </span>
                             </h4>
                         </summary>
-                        <p class="text-muted original">MTG</p>
+                        <p class="text-muted original">Magic: The Gathering (EDH/Modern Player)</p>
+                        <p class="text-muted original">Shadowverse Evolve</p>
                         <p class="text-muted original">Arkham Horror</p>
-                        <p class="text-muted original">Carcassonne</p>
-                        <p class="text-muted original">Catan</p>
-                        <p class="text-muted original">Love Letter</p>
-                        <p class="text-muted original">Seasons</p>
                     </details>
                 </div>
+            </div>
+            <div class="row text-center">
                 <div class="col-md-4 col-sm-6">
                     <details>
                         <summary>
@@ -159,6 +133,7 @@
                         <p class="text-muted original">Dragon Ball Z</p>
                         <p class="text-muted original">Fate/Stay Night</p>
                         <p class="text-muted original">K-ON</p>
+                        <p class="text-muted original">...AND MORE!</p>
                     </details>                   
                 </div>
                 <div class="col-md-4 col-sm-6">
@@ -175,6 +150,19 @@
                         <p class="text-muted original">League of Legends</p>
                         <p class="text-muted original">Megaman X4</p>
                         <p class="text-muted original">Super Mario Maker 2</p>
+                    </details>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <details>
+                        <summary>
+                            <h4 class="service-heading favorite-cursor">
+                                Podcasts
+                                <span class="fa-stack fa-1x">
+                                    <i class="fa fa-podcast fa-stack-1x"></i>
+                                </span>
+                            </h4>
+                        </summary>
+                        <p class="text-muted original">My own Podcast: <a href="https://dzchannel.firstory.io/" target="_blank">DZ Channel</a> (Mandarin)</p>
                     </details>
                 </div>
             </div>
