--- a/_includes/services.html
+++ b/_includes/services.html
@@ -113,7 +113,7 @@
                             </h4>
                         </summary>
                         <p class="text-muted original">Magic: The Gathering (EDH/Modern Player)</p>
-                        <p class="text-muted original">Shadowverse Evolve</p>
+                        <p class="text-muted original">WIXOSS</p>
                         <p class="text-muted original">Arkham Horror</p>
                     </details>
                 </div>
